2005-08-11 J.R. Heisey <jrheisey@sourceforge.com>
	* src/stimuli.cc, src/stimuli.h, src/symbol.cc, src/symbol.h:
	Quick fix of when trying to attach an input data stimuli that
	was broken a couple of checkins ago.

2005-08-11 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.nsi: bump build number

2005-08-11 Scott Dattalo <scott@dattalo.com>
	* src/ioports.cc, src/ioports.h: Added the PeripheralSignalSource
	class to simplify the connection of I/O pins to peripherals. Also,
	added more documentation about the I/O port design.
	* src/p16x7x.h, src/p16x7x.cc, src/p16f87x.cc: The Analog to
	Digital convertor peripheral now connects to I/O pins again. Also,
	the A2D module was redesigned so that less of the internal
	implementation is exposed. 
	* src/14bit-tmrs.h, src/14bit-tmrs.cc, src/ssp.h, src/ssp.cc,
	src/p16x6x.cc: Updated the peripheral connections with the new
	PeripheralSignalSource class.

2005-08-10 J.R. Heisey <jrheisey@sourceforge.com>
	* src/stimuli.cc, src/stimuli.h, src/symbol.cc, src/symbol.h,
	cli/cmd_attach.cc, cli/cmd_attach.h, cli/parse.yy,
	cli/scan.ll, plat/win32/gpsim.def: Modified
	the attach command with the pin() and port() operators.
	Now you can use one of 4 variations of these operators to
	specify the module, port name and/or pin number that represents
	the underlying stimulus object. An example of how to use: if
	a pin number is defined as a program file symbol, you
	may use the symbol name in the port() or pin() operators.
	This way your STC file can be more generic and support a
	variety of firmware code files as long as you use the same
	symbol name for the pin. See the online help for more details.

	The pin() operator refers to package based pins. The port()
	operator refers to port based pins. Other stimulus may still
	be refered to using just the name of the stimulus.

	* src/attributes.cc: Changed a few global symbols so that
	Symbol_Table::Clear() does not remove them.
