@@ -16,6 +16,8 @@ public:
   virtual char *GetName(void) {return (char*)m_name; }
   virtual int Execute(const char * commandline, ISimConsole *out) {
     return CMD_ERR_COMMANDNOTDEFINED;}
+  virtual int ExecuteScript(list<string *> &script, ISimConsole *out)
+  { return CMD_ERR_ERROR;}
   const char * m_name;
 };
 
