@@ -1,3 +1,15 @@
+2005-08-11 Scott Dattalo <scott@dattalo.com>
+	* src/breakpoints.cc, src/breakpoints.h: Allowed breakpoint 
+	expressions for breakpoint instructions to act like assertions.
+	* src/cmd_manager.h, src/cod.cc, src/gpsim_interface.h,
+	  src/modules.cc, src/modules.h, cli/input.cc:
+	Added the capability to run multiple module scripts.
+	* cli/ui_gpsim.cc: Fixed bug guint64 formatted output.
+	* regression/logic_test/Makefile, regression/logic_test/logic_test.asm:
+	The new I/O port design more correctly implements I/O pins and
+	this exposed a bug in the regression test. Also, this regression
+	test was used to develop the multiple Module Script feature.
+
 2005-08-11 J.R. Heisey <jrheisey@sourceforge.com>
 	* src/stimuli.cc, src/stimuli.h, src/symbol.cc, src/symbol.h:
 	Quick fix of when trying to attach an input data stimuli that
